# bevy-fun-with-avian

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: build-on-tag.yml
nix/: devshell.nix
src/: args.rs  main.rs
